cleanup, use NIO
GitOrigin-RevId: 8606fa652d2f3397dfdd8e82010d99651982ea99